# cfd-mlops

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
data/: download_drivaer_data.sh
dataset/: drivaer_dataset.py
docs/: README.md
notebooks/: Data Prep.ipynb  Model.ipynb  ScratchPad.ipynb  Untitled.ipynb
src/: drivaer_dataset.py  model.py  train.py
