[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cfd-mlops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.12.0.dev20260407+cu128",
    "torch-geometric==2.7.0",
    "scipy==1.17.1",
    "jupyter==1.1.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
